# General

./: BLDC_IN_Arduino_C.txt  HAL_ADC_MultiChan_Scan_Continous_DMA.txt  HAL_ADC_MultiChan_Scan_Continous_NoDMA.c  HAL_ADC_MultiChan_Scan_Continous_NoDMA.txt  HAL_PWM_MultiChan.c  HAL_PWM_MultiChan.txt  HAL_Timer_Step_Blink.c  HAL_Timer_Step_Blink.txt  Interrupt.txt  STM32_BMS_21_5 IN C.c  STM32_BMS_21_5 IN C.txt  STM32_BMS_uVision_Code_21_5.c  STM32_BMS_uVision_Code_21_5.txt  adcDma.c  adcDma.txt  adcnodma.c  adcnodma.txt  importantstring.txt  lcdmain.c.txt  lib_lcd1604.c  lib_lcd1604.c.txt  lib_lcd1604.h.txt  lib_stdbool.h.txt
ConcurrentPython/: barberThreads.py
Docker/compileWithPackages/: Dockerfile  (+1 more)
LCD/: README.md  lcdmain.c  lcdmain.c.txt  lib_lcd1604.c  lib_lcd1604.h  lib_stdbool.h
Memories/: BLDC_IN_Arduino_C.c
PythonReadWriteTextFiles/: HT_kirjasto.py  data15.txt  main.py
RowToColumnUsingDelimiter/: RM500OutputCapture20C.txt  RM500OutputCapture50C.txt  convertedFile1.txt  convertedFile2.txt  convertedText.txt  main.cpp  shorter.txt
SeriesRLCPlotter/: seriesRLCplotter.py
StackPointerAndFramePointer/: stackPointerAndFramePointer.cpp  stackPointerAndFramePointer.s
TempSense/: STM32F303K8_UART_Temp_Sense.c
TempSenseKThermocoupler/: main.c
cppProto/: Readme.md  index.html  main  main.cpp  main.py  mylibrary.cpp  mylibrary.h
csvPlotter/: csvplotter.py
csvReader/: plotter.py
mavlink/SystemTesting/carrierFCUSystemTesting/: CMakeLists.txt  README.md  README.txt  carrierFCUSystemTesting.cpp  customSystemTestingLibrary.cpp  customSystemTestingLibrary.h
(+21 files in other folders)
